# rustygraph

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SCHEDULE.md  MANIFEST.in  PUBLISHING_CHECKLIST.md  README.md  VISUAL_GUIDE.md  pyproject.toml  sonar-project.properties  test_python_bindings.py  test_python_features.py
.github/workflows/: README.md  bump_version.py  main.yml  publish-python-on-tag.yml  publish-python.yml  publish.yml  rust.yml  setup-pypi.sh
benches/: comprehensive_benchmarks.rs  parallel_comparison.rs  simd_comparison.rs  visibility_benchmarks.rs
docs/: CLEANUP_SUMMARY.md  FINAL_ORGANIZATION.md  FIX_SIMD_BORROW.md  ORGANIZATION.md
examples/: advanced_analytics.rs  advanced_features.rs  advanced_optimization.rs  advanced_statistics.rs  basic_usage.rs  benchmarking_validation.rs  community_detection.rs  direct_comparison.rs  export_formats.rs  gpu_benchmark.rs  gpu_large_graph_benchmark.rs  gpu_optimized_benchmark.rs  gpu_precision_comparison.rs  gpu_showcase.rs  ground_truth.rs  integrations.rs  manual_verify.rs  ml_dataloader.rs  performance_io.rs  polars_integration.rs  rust_benchmark.rs  simd_and_motifs.rs  test_edge_consistency.rs  test_parallel_on.rs  verify_edges.rs  verify_false_positive.rs  weighted_graphs.rs  with_features.rs
examples/benchmarks/: performance_showcase.rs  validate_claims.rs
examples/gpu/: gpu_realistic_benchmark.rs  metal_debug.rs
examples/testing/: check_simd.rs  correctness_test.rs  debug_edge_bug.rs  edge_diff.rs  test_parallel_simd.rs
python/examples/: comprehensive_example.py
python/rustygraph/: __init__.py  __init__.pyi
python/tests/: test_enhanced_bindings.py
scripts/: benchmark_rust_vs_python.py  compare_edge_counts.sh  compare_rust_sequential_vs_optimized.sh
src/: advanced.rs  batch.rs  community.rs  datasets.rs  export.rs  export_advanced.rs  import.rs  lazy.rs  lib.rs  metrics.rs  motifs.rs  parallel.rs  petgraph_integration.rs  python.rs  simd.rs  statistics.rs  time_series.rs  visibility_graph.rs
src/advanced/: frequency.rs  mod.rs
src/algorithms/: edges.rs  horizontal.rs  mod.rs  natural.rs
src/analysis/: community.rs  metrics.rs  mod.rs  motifs.rs  statistics.rs
src/core/: data_split.rs  mod.rs  time_series.rs  visibility_graph.rs
src/core/algorithms/: edges.rs  mod.rs
src/core/features/: builtin.rs  missing_data.rs  mod.rs
src/features/: builtin.rs  missing_data.rs  mod.rs
src/integrations/: burn.rs  mod.rs  ndarray.rs  petgraph.rs  polars.rs  python.rs
src/io/: export.rs  export_advanced.rs  mod.rs
src/performance/: batch.rs  gpu.rs  lazy.rs  metal.rs  mod.rs  parallel.rs  simd.rs  tuning.rs
src/performance/shaders/: visibility.metal
src/utils/: datasets.rs  mod.rs
tests/: horizontal_visibility_tests.rs  integration_tests.rs  natural_visibility_tests.rs  property_tests.proptest-regressions  property_tests.rs  time_series_tests.rs  visibility_graph_tests.rs
