[package]
name = "rustygraph"
version = "0.1.0"
edition = "2021"
authors = ["Paul Magos <paul@example.com>"]
description = "A high-performance library for visibility graph computation from time series data"
documentation = "https://docs.rs/rustygraph"
repository = "https://github.com/paulmagos/rustygraph"
license = "MIT"
keywords = ["time-series", "graph", "visibility", "network", "complex-networks"]
categories = ["algorithms", "science", "data-structures"]
readme = "README.md"

[lib]
name = "rustygraph"
path = "src/lib.rs"

[dependencies]
dataloader = "0.18.0"
futures = "0.3"

[dev-dependencies]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "with_features"
path = "examples/with_features.rs"

