[package]
name = "rustygraph"
version = "0.4.0"
edition = "2021"
authors = ["Paul Magos <paul@examplze.com>"]
description = "A high-performance library for visibility graph computation from time series data"
documentation = "https://docs.rs/rustygraph"
repository = "https://github.com/paulmagos/rustygraph"
license = "MIT"
keywords = ["time-series", "graph", "visibility", "network", "complex-networks"]
categories = ["algorithms", "science", "data-structures"]
readme = "README.md"

[lib]
name = "rustygraph"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
dataloader = "0.18.0"
futures = "0.3"

# Optional features
rayon = { version = "1.8", optional = true }
csv = { version = "1.3", optional = true }
rustfft = { version = "6.2", optional = true }
ndarray = { version = "0.16", optional = true }
ndarray-npy = { version = "0.9", optional = true }
parquet = { version = "57.0.0", optional = true }
arrow = { version = "57.0.0", optional = true }
hdf5 = { version = "0.8", optional = true }
petgraph = { version = "0.6", optional = true }
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }
numpy = { version = "0.22", optional = true }

[features]
default = []
parallel = ["rayon"]
csv-import = ["csv"]
advanced-features = ["rustfft"]
npy-export = ["ndarray", "ndarray-npy"]
parquet-export = ["parquet", "arrow"]
hdf5-export = ["hdf5"]
petgraph-integration = ["petgraph"]
python-bindings = ["pyo3", "numpy", "ndarray"]
ndarray-support = ["ndarray"]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "visibility_benchmarks"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "with_features"
path = "examples/with_features.rs"

[[example]]
name = "weighted_graphs"
path = "examples/weighted_graphs.rs"

